--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ box-shadow:3px 3px 10px 10px rgb(108, 106, 106) ;
     </ul>
     </div><hr>
     <br>
-   <img src="./IMAGES/Motivational.jpg.crdownload"height="400"width="1300"style="margin-left:100px;margin-right:50px;margin-top:10px">
+   <img src="./IMAGES/Motivational.jpg.crdownload"height="400"width="1300"style="margin-left:100px;margin-right:50px;">
 <div class="container1">
     <div class="item1">
    <a href=""><img src="./IMAGES/siren.png"height="60"width="100"></a>
