--- a/pages/pacient_guidence.html
+++ b/pages/pacient_guidence.html
@@ -20,9 +20,10 @@
        <li><a href="./pages/about_us.html">About us</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
        <li><a href="./pages/contact_us.html">Contact us</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
        <li><a href="./pages/help.html">Help</a>&nbsp;&nbsp;</li> 
-        </ul><hr>
+      </ul><hr>
         </div>
-
+        <img src="../IMAGES/about.jpg"height="500"width="1400"style="margin-left:50px;margin-right:50px;border:5px solid black;box-shadow:0px 0px 5px 10px grey;margin-top:10px"><br><br><br>
+        <div class="container2"style="height:400px">
 
 
 
