--- a/pages/pacient_guidence.html
+++ b/pages/pacient_guidence.html
@@ -23,8 +23,32 @@
       </ul><hr>
         </div>
         <img src="../IMAGES/about.jpg"height="500"width="1400"style="margin-left:50px;margin-right:50px;border:5px solid black;box-shadow:0px 0px 5px 10px grey;margin-top:10px"><br><br><br>
-        <div class="container2"style="height:400px">
+        <div class="container2"style="height:600px;">
+        <div class="box1"style="background-color:AQUA;margin-left:300px;height:1000px;">
+          <p>
+            <span>
+              <h3>INTRODUCTION</h3>
+              Vrindavan Hospital is known for its commitment to providing comprehensive healthcare services. 
+              Specializing in a variety of medical fields, the hospital is dedicated to offering patient-centered care with a focus on quality and compassion. 
+              With state-of-the-art facilities and a team of experienced professionals, Vrindavan Hospital strives to meet the healthcare needs of the community efficiently and effectively.
+              <p>
+                Vrindavan Hospital is especially renowned for its exceptional cardiology and orthopedic services. 
+<p>
+In cardiology, the hospital offers advanced diagnostic and treatment options, including interventional cardiology procedures, cardiac surgeries, and comprehensive cardiac rehabilitation programs. 
+The cardiology department is equipped with cutting-edge technology and staffed by experienced cardiologists and cardiac surgeons dedicated to providing the highest standard of care for patients with heart conditions.
+</p>
+<p>
+In orthopedics, Vrindavan Hospital excels in providing comprehensive care for musculoskeletal issues.
+ The orthopedic department specializes in joint replacement surgeries, trauma care, sports medicine, and minimally invasive surgical techniques.
+  With a team of skilled orthopedic surgeons and state-of-the-art facilities, the hospital ensures effective treatment and rehabilitation for patients with bone and joint problems.
+</p>
+Overall, Vrindavan Hospital stands out for its commitment to excellence in cardiology and orthopedics, making it a trusted choice for patients seeking specialized medical care in these fields.<br>
+<img src="../group-healthcare.avif"style="height:200px;width:300px;border:2px solid black;">
+              </p>
+            </span>
+          </p>
 
+        </div>
 
 
 
