--- a/pages/specialist.html
+++ b/pages/specialist.html
@@ -16,15 +16,15 @@
         <div class="heading2"><ul style="margin:2px;padding:2px;display:flex;justify-content:center;">
           <li><a href="../index.html">Home</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
        <li><a href="../pages/specialist.html">Specialist</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
-       <li><a href="pages/pacient_guidence.html">Pacient guidence</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
-       <li><a href="pages/Facilities.html">Facialities</a>&nbsp;&nbsp;</li>&nbsp;&nbsp; &nbsp;&nbsp;
-       <li><a href="../pages/about_us.html">About us</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
-       <li><a href="pages/contact_us.html">Contact us</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
+       <li><a href="./pages/pacient_guidence.html">Pacient guidence</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
+       <li><a href="./pages/Facilities.html">Facialities</a>&nbsp;&nbsp;</li>&nbsp;&nbsp; &nbsp;&nbsp;
+       <li><a href="./pages/about_us.html">About us</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
+       <li><a href="./pages/contact_us.html">Contact us</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
        <li><a href="./pages/help.html">Help</a>&nbsp;&nbsp;</li> 
         </ul><hr>
         </div>
         <br>
-       <img src="../IMAGES/doctor.jpg"height="500"width="1300"style="margin-left:100px;margin-right:50px;border:5px solid black;box-shadow:0px 0px 5px 10px grey;margin-top:10px"><br><br><br>
+       <img src="../IMAGES/about-us-new.jpg.webp"height="500"width="1400"style="margin-left:50px;margin-right:50px;border:5px solid black;box-shadow:0px 0px 5px 10px grey;margin-top:10px"><br><br><br>
        <div class="container2"style="height:400px">
        <img src="../IMAGES/doctor2.jpg"height="320"width="400"style="margin-left:30px;border:3px solid black;box-shadow:0px 0px 5px 3px grey;">
       <div class="box1">
