--- a/pages/pacient_guidence.html
+++ b/pages/pacient_guidence.html
@@ -27,9 +27,16 @@
         <div class="container2"style="height:1200px;">
             <div class="box1">
                 <h3>Before Your Visit</h3>
-   - Appointment Scheduling: Schedule your appointment in advance through the hospital's website, app, or by calling the appointment desk.
-   - Medical Records: Gather all relevant medical records, previous test results, and a list of medications you are currently taking.
-   - Insurance Details: Check your insurance policy for coverage details and ensure you bring your insurance card and identification.
+   - Appointment Scheduling: Schedule your appointment in advance through the hospital's website, app, or by calling the appointment desk.<br>
+   - Medical Records: Gather all relevant medical records, previous test results, and a list of medications you are currently taking.<br>
+   - Insurance Details: Check your insurance policy for coverage details and ensure you bring your insurance card and identification.<br>
+            </div>
+            <div class="box1">
+                <h3>On the Day of Your Visit</h3>
+                - Arrival Time: Arrive at least 15-30 minutes before your scheduled appointment to allow time for registration and initial assessments.
+                - What to Bring: Bring your ID, insurance card, medical records, a list of medications, and any necessary authorization forms.
+                - Dress Comfortably: Wear comfortable clothing and shoes, as you may need to move around the hospital for various tests and consultations.
+             
             </div>
     
   </div>  
