modified  facilities  page

--- a/pages/specialist.html
+++ b/pages/specialist.html
@@ -16,8 +16,8 @@
         <div class="heading2"><ul style="margin:2px;padding:2px;display:flex;justify-content:center;">
           <li><a href="../index.html">Home</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
        <li><a href="../pages/specialist.html">Specialist</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
-       <li><a href="./pages/pacient_guidence.html">Pacient guidence</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
-       <li><a href="./pages/Facilities.html">Facialities</a>&nbsp;&nbsp;</li>&nbsp;&nbsp; &nbsp;&nbsp;
+       <li><a href="pacient_guidence.html">Pacient guidence</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
+       <li><a href="./Facilities.html">Facialities</a>&nbsp;&nbsp;</li>&nbsp;&nbsp; &nbsp;&nbsp;
        <li><a href="./pages/about_us.html">About us</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
        <li><a href="./pages/contact_us.html">Contact us</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
        <li><a href="./pages/help.html">Help</a>&nbsp;&nbsp;</li> 
