--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -43,17 +43,17 @@ In orthopedics, Vrindavan Hospital excels in providing comprehensive care for mu
   With a team of skilled orthopedic surgeons and state-of-the-art facilities, the hospital ensures effective treatment and rehabilitation for patients with bone and joint problems.
 </p>
 Overall, Vrindavan Hospital stands out for its commitment to excellence in cardiology and orthopedics, making it a trusted choice for patients seeking specialized medical care in these fields.<br>
-<br><img src="../group-healthcare.avif"style="height:200px;width:300px;border:2px solid black;"><br><br>
+<br><img src="./../IMAGES/group-healthcare.avif"style="height:200px;width:300px;border:2px solid black;"><br><br>
 <b> Vrindavan Hospital is known for:</b><BR>
   <ol style="text-align: left;margin-left:300px">
-<li> Comprehensive Care*: Wide range of medical services.<BR></li>
-  <li> Expert Team*: Skilled and experienced healthcare professionals.<BR></li>
-    <li>Advanced Technology*: State-of-the-art equipment and facilities.<BR></li>
-      <li> Patient-Centered*: Personalized and compassionate care.<BR></li>
-        <li>Specialized Services*: Notable expertise in cardiology and orthopedics.<BR></li>
-          <li>Quality and Safety*: Strict adherence to quality control and safety protocols.<BR></li>
-            <li>Community Engagement*: Active participation in health awareness programs.<BR></li>
-              <li>Efficient Services*: Timely and effective patient care.<BR></li>
+<li> Comprehensive Care: Wide range of medical services.<BR></li>
+  <li> Expert Team: Skilled and experienced healthcare professionals.<BR></li>
+    <li>Advanced Technology: State-of-the-art equipment and facilities.<BR></li>
+      <li> Patient-Centered: Personalized and compassionate care.<BR></li>
+        <li>Specialized Services: Notable expertise in cardiology and orthopedics.<BR></li>
+          <li>Quality and Safety: Strict adherence to quality control and safety protocols.<BR></li>
+            <li>Community Engagement: Active participation in health awareness programs.<BR></li>
+              <li>Efficient Services: Timely and effective patient care.<BR></li>
 </ol>
               </p>
             </span>
