modified  facilities  page

--- a/pages/Facilities.html
+++ b/pages/Facilities.html
@@ -22,8 +22,32 @@
        <li><a href="./pages/help.html">Help</a>&nbsp;&nbsp;</li> 
       </ul><hr>
         </div><br><br>
-        <video controls autoplay style="border:2px solid black;width:1000px;margin-left:200px;box-shadow:0px 0px 5px 5px grey ;">
-            <source src="./../videos/stock-footage-nurse-and-paramedic-quickly-open-medical-facility-corridor-doors-surgeons-push-stretcher-with.webm">
-        </video>
+        <img src="./../IMAGES/DSC02918_1.jpg"style="height:400px;width:1300px;border:2px solid black;box-shadow:0px 0px 5px 5px grey;margin-left:100px; ">
+        <br><br><br>
+        <div class="container4">
+          <div class="box2">
+        <h3> Vrindavan Hospital offers a range of medical facilities and services, which may include:</h3> 
+        <img src="./../IMAGES/hospital.jpg"height="200px"width="300px">
+        <img src="./../IMAGES/health.jpg"height="200px"width="300px">
+        <img src="./../IMAGES/Ambulance.jpg"height="200px"width="300px"><br><br>
+<span style="text-align:center;">
+1. Emergency Services: 24/7 emergency care with advanced life support and critical care units.<br>
+2. Outpatient Services: Various specialty clinics and consultation services for different medical conditions.<br>
+3. Inpatient Services:Well-equipped patient rooms and wards for admitted patients, including ICU and NICU.<br>
+4. Diagnostic Services:Advanced imaging facilities like MRI, CT scan, X-ray, ultrasound, and laboratory services.<br>
+5. Surgical Services: Operation theaters for general, laparoscopic, and specialized surgeries.<br>
+6. Maternity and Child Care: Comprehensive obstetric and pediatric services, including labor and delivery rooms.<br>
+7. Pharmacy: In-house pharmacy providing medications and medical supplies.<br>
+8. Physiotherapy and Rehabilitation:Services for physical rehabilitation and therapy.<br>
+9. Specialty Departments:Cardiology, neurology, orthopedics, gastroenterology, oncology, and more.<br>
+10.Preventive Health Check-ups: Health screening packages and preventive care programs.<br><br>
+</span>
+For detailed and specific information, it's best to contact the hospital directly or visit their odfficial website.
+<br><br>
+<img src="./../IMAGES/facilities.jpg"height="200px"width="300px">
+<img src="./../IMAGES/facility.jpg"height="200px"width="300px">
+<img src="./../IMAGES/group-healthcare.avif"height="200px"width="300px">
+</div>
+        </div>
         </body>
         </html>
