--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -18,8 +18,8 @@
        <li><a href="../pages/pacient_guidence.html">Pacient guidence</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
        <li><a href="../pages/Facilities.html">Facialities</a>&nbsp;&nbsp;</li>&nbsp;&nbsp; &nbsp;&nbsp;
        <li><a href="../pages/about_us.html">About us</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
-       <li><a href="./pages/contact_us.html">Contact us</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
-       <li><a href="./pages/help.html">Help</a>&nbsp;&nbsp;</li> 
+       <li><a href="#23">Contact us</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
+       <li><a href="./Login.html">Help</a>&nbsp;&nbsp;</li> 
       </ul><hr>
         </div>
         <img src="../IMAGES/about.jpg"height="500"width="1400"style="margin-left:50px;margin-right:50px;border:5px solid black;box-shadow:0px 0px 5px 10px grey;margin-top:10px"><br><br><br>
@@ -74,7 +74,7 @@ Overall, Vrindavan Hospital stands out for its commitment to excellence in cardi
         phone:-(124)456-7490<br>
         Email:-vrindavanhospital@gmail.com </span>
         </div>
-        <div style="margin-left: 200px;" >
+        <div style="margin-left: 200px;"id="23" >
          <h2>contact us:</h2>
          <img src="../IMAGES/location.png"height="30px"width="30px">Location:<br>
          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d481709.58467158064!2d74.03378608906253!3d19.397012800000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bdc938ff750e4d7%3A0x4bb0fd6fc601092a!2sSaidham%20Hospital!5e0!3m2!1sen!2sin!4v1721914382831!5m2!1sen!2sin" 
