--- a/pages/specialist.html
+++ b/pages/specialist.html
@@ -19,8 +19,8 @@
        <li><a href="pacient_guidence.html">Pacient guidence</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
        <li><a href="./Facilities.html">Facialities</a>&nbsp;&nbsp;</li>&nbsp;&nbsp; &nbsp;&nbsp;
        <li><a href="./about_us.html">About us</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
-       <li><a href="./contact_us.html">Contact us</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
-       <li><a href="./help.html">Help</a>&nbsp;&nbsp;</li> 
+       <li><a href="#21">Contact us</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
+       <li><a href="./Login.html">Help</a>&nbsp;&nbsp;</li> 
         </ul><hr>
         </div>
         <br>
@@ -110,7 +110,7 @@ healthville,state:maharastra<br>
 phone:-(124)456-7490<br>
 Email:-vrindavanhospital@gmail.com </span>
 </div>
-<div style="margin-left: 200px;" >
+<div style="margin-left: 200px;" id="21">
  <h2>contact us:</h2>
  <img src="../IMAGES/location.png"height="30px"width="30px">Location:<br>
  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d481709.58467158064!2d74.03378608906253!3d19.397012800000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bdc938ff750e4d7%3A0x4bb0fd6fc601092a!2sSaidham%20Hospital!5e0!3m2!1sen!2sin!4v1721914382831!5m2!1sen!2sin" 
