--- a/pages/specialist.html
+++ b/pages/specialist.html
@@ -7,22 +7,22 @@
    <link rel="stylesheet" href="./style.css"> </link>
 
 </head>
-<body>
-    <span class="heading1">
-        <img src="../IMAGES/icon.jpg" class="heading1"height="60"width="70"style="margin-left:130px">
-      VRINDAVAN <img src="../IMAGES/symbol"height="60"width="70"> HOSPITAL
-      <img src="../IMAGES/icon.jpg"height="60"width="70"style="margin-right:210px"></span><br><br><hr>
-      
-        <div class="heading2"><ul style="margin:2px;padding:2px;display:flex;justify-content:center;">
-          <li><a href="../index.html">Home</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
-       <li><a href="../pages/specialist.html">Specialist</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
-       <li><a href="pacient_guidence.html">Pacient guidence</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
-       <li><a href="./Facilities.html">Facialities</a>&nbsp;&nbsp;</li>&nbsp;&nbsp; &nbsp;&nbsp;
-       <li><a href="./about_us.html">About us</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
-       <li><a href="#21">Contact us</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
-       <li><a href="./Login.html">Help</a>&nbsp;&nbsp;</li> 
-        </ul><hr>
-        </div>
+<body style="background-color: honeydew;">
+  <span class="heading1">
+    <img src="../IMAGES/icon.jpg"height="60"width="70"style="margin-left:130px">
+  VRINDAVAN <img src="../IMAGES/symbol"height="60"width="70"> HOSPITAL
+  <img src="../IMAGES/icon.jpg"height="60"width="70"style="margin-right:210px"></span><br><br>
+
+    <div class="heading2">
+    <a href="../index.html" class="btn">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+   <a href="./specialist.html"class="btn">Specialist</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+   <a href="./pacient_guidence.html"class="btn">Pacient guidence</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+   <a href="./Facilities.html"class="btn">Facialities</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;
+   <a href="./about_us.html"class="btn">About us</a>&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+   <a href="#21"class="btn">Contact us</a>&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+   <a href="./Login.html"class="btn">Login</a>&nbsp;&nbsp;
+    
+    </div>
         <br>
        <img src="../IMAGES/about-us-new.jpg.webp"height="500"width="1400"style="margin-left:50px;margin-right:50px;border:5px solid black;box-shadow:0px 0px 5px 10px grey;margin-top:10px"><br><br><br>
        <div class="container2"style="height:400px">
