--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
     <title>hospital</title>
     <link rel="stylesheet" href="./pages/style.css"> </link>
 </head>
-<body>
+<body style="background-color:honeydew;">
    <span class="heading1">
-    <img src="./IMAGES/icon.jpg" class="heading1"height="60"width="70"style="margin-left:130px">
+    <img src="./IMAGES/icon.jpg"height="60"width="70"style="margin-left:130px">
   VRINDAVAN <img src="./IMAGES/symbol"height="60"width="70"> HOSPITAL
-  <img src="./IMAGES/icon.jpg"height="60"width="70"style="margin-right:210px"></span><br><br><hr>
+  <img src="./IMAGES/icon.jpg"height="60"width="70"style="margin-right:210px"></span><br><br>
 
-    <div class="heading2"><ul style="margin:2px;padding:2px;display:flex;justify-content:center;">
-        <li><a href="./index.html">Home</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
-   <li><a href="./pages/specialist.html">Specialist</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
-   <li><a href="./pages/pacient_guidence.html">Pacient guidence</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
-   <li><a href="./pages/Facilities.html">Facialities</a>&nbsp;&nbsp;</li>&nbsp;&nbsp; &nbsp;&nbsp;
-   <li><a href="./pages/about_us.html">About us</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
-   <li><a href="#contact_us">Contact us</a>&nbsp;&nbsp;</li> &nbsp;&nbsp;&nbsp;&nbsp;
-   <li><a href="./pages/Login.html">Help</a>&nbsp;&nbsp;</li> 
-    </ul>
-    </div><hr>
+    <div class="heading2">
+    <a href="./index.html" class="btn">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+   <a href="./pages/specialist.html"class="btn">Specialist</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+   <a href="./pages/pacient_guidence.html"class="btn">Pacient guidence</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+   <a href="./pages/Facilities.html"class="btn">Facialities</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;
+   <a href="./pages/about_us.html"class="btn">About us</a>&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+   <a href="#contact_us"class="btn">Contact us</a>&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
+   <a href="./pages/Login.html"class="btn">Login</a>&nbsp;&nbsp;
+    
+    </div>
     <br>
    <img src="./IMAGES/Motivational.jpg.crdownload"height="400"width="1300"style="margin-left:100px;margin-right:50px;">
 <div class="container1">
