--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <br>
    <img src="./IMAGES/Motivational.jpg.crdownload"height="400"width="1300"style="margin-left:100px;margin-right:50px;">
-<div class="container1">
+<div class="container1"style="background-image:url(team.jpg);">
     <div class="item1">
    <a href=""><img src="./IMAGES/siren.png"height="60"width="100"></a>
     <h4>Emergency & trauma</h4>
