--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
    <img src="./IMAGES/Motivational.jpg.crdownload"height="400"width="1300"style="margin-left:100px;margin-right:50px;">
 <div class="container1"style="background-image:url(team.jpg);">
     <div class="item1">
-   <a href=""><img src="./IMAGES/siren.png"height="60"width="100"></a>
+   <a href="./pages/emergency.html"><img src="./IMAGES/siren.png"height="60"width="100"></a>
     <h4>Emergency & trauma</h4>
 </div>
 <div class="item1">
-   <a href="" ><img src="./IMAGES/heart.png"height="60"width="100"></a>
+   <a href="./pages/cardic.html" ><img src="./IMAGES/heart.png"height="60"width="100"></a>
     <h4 style="text-align: center;">Cardic Science</h4>
 </div>
 <div class="item1">
